added a basic file uploader using formidable

--- a/OGV/client/main.html
+++ b/OGV/client/main.html
@@ -17,9 +17,10 @@
 				{{> forgotPassword}}
 			{{/unless}}
 		{{else}}
-			{{> logOut}}
+			{{> uploader}}
 		{{/unless}}
 	{{else}}
 		{{> resetPassword}}
 	{{/unless}}
+	
 </template>
