added basic styling

--- a/OGV/client/main.html
+++ b/OGV/client/main.html
@@ -2,9 +2,11 @@
 	<title> Online Geometry Viewer </title>
 </head>
 <body>
-	
-	{{> alert}}
-	 {{> renderPage}}
+	{{> menu}}
+	<div class="page-container wrapper">
+		{{> alert}}
+		{{> renderPage}}
+	</div>
 </body>
 
 
