Added model feed and fixed some minor bugs

--- a/OGV/client/index.html
+++ b/OGV/client/index.html
@@ -3,7 +3,7 @@
 		{{#unless currentUser}}
 				{{> logIn}}
 		{{else}}
-			{{> logOut}}
+			{{> modelFeed}}
 		{{/unless}}
 	{{else}}
 		{{> resetPassword}}
