--- a/OGV/client/layout.html
+++ b/OGV/client/layout.html
@@ -2,7 +2,7 @@
 	<div class ="zameen">
 		{{> menu}}
 		<div id="main" class="page-container row-fluid">
-			{{> errors}}
+			{{> notifications}}
 			{{> yield}}
 		</div>
 	</div>
