--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -1,7 +1,33 @@
 <template name="landingPage">
     <!-- Slide 2 -->
     <section class="slide story" id="slide-2" data-slide="2">
-        
+    <div class="container-fluid">
+        <div class="row mt centered">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <h1 class="font-semibold heading-size">Look Feel and Share your design</h1>
+                <h3 class="subHeading-size">View your design and share following just simple steps.</h3>
+            </div>            
+        </div><!-- /row --> <br />
+        <div class="row mt centered">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <p><img class="mobile-view-plane" src="/icons/plane.png" width="100px" height="100px"/></p>
+                <h2 class="font-thin">Upload</h2>
+                <p>Browse/Drag and Drop to upload your .g file.</p>
+            </div><!--/col-lg-4 -->
+
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <p><img class="mobile-view-cube" src="/icons/cube.png" width="100px" height="100px"/></p>
+                <h2 class="font-thin">View</h2>
+                <p>View your design in three dimension.</p>
+            </div><!--/col-lg-4 -->
+
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <p><img class="mobile-view-rocket" src="/icons/rocket.png" width="100px" height="100px"/></p>
+                <h2 class="font-thin">Share</h2>
+                <p>Share your design with anyone and anywhere.</p>
+            </div><!--/col-lg-4 -->        
+        </div>            
+    </div>    
     </section>
     
     <!-- Slide 4 -->
@@ -18,22 +44,22 @@
             </div>
             <div class="row content-row">
                 <div class="col-12 col-lg-3 col-sm-6">
-                    <p><img src="/icons/fileUpload.png" width="50%" height="50%"/></p>
+                    <p><img class="mobile-view-fileUpload" src="/icons/fileUpload.png" width="140px" height="140px"/></p>
                     <h2 class="font-thin">Upload Model</h2>
                     <h4 class="font-thin">Countless number of .g files can be uploaded from your browers.</h4>
                 </div>
                 <div class="col-12 col-lg-3 col-sm-6">
-                    <p><img src="/icons/computer.png" width="50%" height="50%"/></p>
+                    <p><img class="mobile-view-computer" src="/icons/computer.png" width="140px" height="140px"/></p>
                     <h2 class="font-thin">Visualize</h2>
                     <h4 class="font-thin">Visualize your models in three dimensions and communicate more effectively.</h4>                    
                 </div>
                 <div class="col-12 col-lg-3 col-sm-6">
-                    <p><img src="/icons/share.png" width="50%" height="50%"/></p>
+                    <p><img class="mobile-view-share" src="/icons/share.png" width="140px" height="140px"/></p>
                     <h2 class="font-thin">Embed and Share</h2>
                     <h4 class="font-thin">Embed annd share your models anywhere on social sites, blogs or others.</h4>
                 </div>
                 <div class="col-12 col-lg-3 col-sm-6">
-                    <p><img src="/icons/download.png" width="50%" height="50%"/></p>
+                    <p><img class="mobile-view-download" src="/icons/download.png" width="140px" height="140px"/></p>
                     <h2 class="font-thin">Download Options</h2>
                     <h4 class="font-thin">Fetch, download and use the 3D models for printing and more.</h4>
                 </div>
