--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -1,46 +1,72 @@
 <template name="landingPage">
-    <!-- Slide 2 -->
-    <section class="slide story" id="slide-2" data-slide="2">
-    <div class="container-fluid">
+    <!-- Slide 1 Start-->
+    <section class="slide-1" id="slide-1" data-slide="1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h2 class="font-thin">BRL-CAD</h2>
+                    <h1>Online Geometry Viewer</h1>
+                    <h2>A social blogging platform for 3D models.</h2> <br />
+                    <button class="btn btn-default">Sign-In</button>
+                </div>
+            </div>
+        </div>           
+    </section>
+    <div style="clear:both;"></div>
+    <div id="slide-1-subPart">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h3>Explore the power of OGV</h3>
+                </div>
+            </div>
+        </div>
+    </div>    
+    <!-- Slide 1 Over -->
+
+    <!-- Slide 2 Start-->
+    <section class="slide" id="slide-2" data-slide="2">
+    <div class="container">
         <div class="row mt centered">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <h1 class="font-semibold heading-size">Look Feel and Share your design</h1>
                 <h3 class="subHeading-size">View your design and share following just simple steps.</h3>
             </div>            
-        </div><!-- /row --> <br />
-        <div class="row mt centered">
+        </div> <br />
+        <div class="row mt centered content">
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <p><img class="mobile-view-plane" src="/icons/plane.png" width="100px" height="100px"/></p>
                 <h2 class="font-thin">Upload</h2>
-                <p>Browse/Drag and Drop to upload your .g file.</p>
-            </div><!--/col-lg-4 -->
+                <h4>Browse/Drag and Drop to upload your .g file.</h4>
+            </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <p><img class="mobile-view-cube" src="/icons/cube.png" width="100px" height="100px"/></p>
                 <h2 class="font-thin">View</h2>
-                <p>View your design in three dimension.</p>
-            </div><!--/col-lg-4 -->
+                <h4>View your design in three dimension.</h4>
+            </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <p><img class="mobile-view-rocket" src="/icons/rocket.png" width="100px" height="100px"/></p>
                 <h2 class="font-thin">Share</h2>
-                <p>Share your design with anyone and anywhere.</p>
-            </div><!--/col-lg-4 -->        
+                <h4>Share your design with anyone and anywhere.</h4>
+            </div>        
         </div>            
     </div>    
     </section>
-    
-    <!-- Slide 4 -->
+    <!-- Slide 2 Over -->
+
+    <!-- Slide 4 Start-->
     <section class="slide story" id="slide-4" data-slide="4">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin">Contrary to popular belief, <span class="font-semibold">OGV</span> is not simply only a viewer.</div>
+                <div class="col-12 font-thin heading-slide-4">Contrary to popular belief, <span class="font-semibold ">OGV</span> is not simply only a viewer.</div>
             </div>
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
             </div>
             <div class="row subtitle-row">
-                <div class="col-12 font-thin">This is what <span class="font-semibold">OGV do best</span></div>
+                <div class="col-12 font-thin subHeading-slide-4">This is what <span class="font-semibold">OGV do best</span></div>
             </div>
             <div class="row content-row">
                 <div class="col-12 col-lg-3 col-sm-6">
@@ -65,5 +91,6 @@
                 </div>
             </div>
         </div>
-    </section> <!-- Slide 4 over-->
+    </section> 
+    <!-- Slide 4 over-->
 </template>
