--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -17,7 +17,11 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <h3>Explore the power of OGV</h3>
+                    <h3>Explore the power of OGV</h3><br />
+                    <div class="row line-row">
+                        <div class="hr">&nbsp;</div>
+                    </div><br />
+                    <h4 class="subPart-para">BRL-CAD has designed this package that provides the freedom of proficiency to the common user. Whatever formulated offline can be reckoned online, just the minor requirements .g file. Bestowing the freedom of platform independence, is used to render graphics. It can be used as a standalone viewer for static objects or as a display engine for other programs which produce dynamically changing geometry.</h4>
                 </div>
             </div>
         </div>
@@ -36,19 +40,19 @@
         <div class="row mt centered content">
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <p><img class="mobile-view-plane" src="/icons/plane.png" width="100px" height="100px"/></p>
-                <h2 class="font-thin">Upload</h2>
+                <h2 class="font-thin description">Upload</h2>
                 <h4>Browse/Drag and Drop to upload your .g file.</h4>
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <p><img class="mobile-view-cube" src="/icons/cube.png" width="100px" height="100px"/></p>
-                <h2 class="font-thin">View</h2>
+                <h2 class="font-thin description">View</h2>
                 <h4>View your design in three dimension.</h4>
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <p><img class="mobile-view-rocket" src="/icons/rocket.png" width="100px" height="100px"/></p>
-                <h2 class="font-thin">Share</h2>
+                <h2 class="font-thin description">Share</h2>
                 <h4>Share your design with anyone and anywhere.</h4>
             </div>        
         </div>            
@@ -56,23 +60,39 @@
     </section>
     <!-- Slide 2 Over -->
 
+    <!-- Slide 3 Start -->
+    <div id="slide-3" class="story" data-slide="3">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h1>Freely licensed software</h1><br />
+                    <div class="row line-row">
+                        <div class="hr">&nbsp;</div>
+                    </div><br />
+                    <h3>Its the matter of liberty, not the price.</h3>
+                </div>
+            </div>
+        </div>
+    </div>    
+    <!-- Slide 3 Over -->
+
     <!-- Slide 4 Start-->
     <section class="slide story" id="slide-4" data-slide="4">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin heading-slide-4">Contrary to popular belief, <span class="font-semibold ">OGV</span> is not simply only a viewer.</div>
+                <div class="col-12 font-thin heading-slide-4">Contrary to popular belief, <span class="font-semibold semibold">OGV</span> is not simply only a viewer.</div>
             </div>
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
             </div>
             <div class="row subtitle-row">
-                <div class="col-12 font-thin subHeading-slide-4">This is what <span class="font-semibold">OGV do best</span></div>
+                <div class="col-12 font-thin subHeading-slide-4">This is what <span class="font-semibold semibold">OGV do best</span></div>
             </div>
             <div class="row content-row">
                 <div class="col-12 col-lg-3 col-sm-6">
                     <p><img class="mobile-view-fileUpload" src="/icons/fileUpload.png" width="140px" height="140px"/></p>
                     <h2 class="font-thin">Upload Model</h2>
-                    <h4 class="font-thin">Countless number of .g files can be uploaded from your browers.</h4>
+                    <h4 class="font-thin">Countless number of .g files can be uploaded from your browsers.</h4>
                 </div>
                 <div class="col-12 col-lg-3 col-sm-6">
                     <p><img class="mobile-view-computer" src="/icons/computer.png" width="140px" height="140px"/></p>
@@ -82,7 +102,7 @@
                 <div class="col-12 col-lg-3 col-sm-6">
                     <p><img class="mobile-view-share" src="/icons/share.png" width="140px" height="140px"/></p>
                     <h2 class="font-thin">Embed and Share</h2>
-                    <h4 class="font-thin">Embed annd share your models anywhere on social sites, blogs or others.</h4>
+                    <h4 class="font-thin">Embed and share your models anywhere on social sites, blogs or others.</h4>
                 </div>
                 <div class="col-12 col-lg-3 col-sm-6">
                     <p><img class="mobile-view-download" src="/icons/download.png" width="140px" height="140px"/></p>
@@ -93,4 +113,9 @@
         </div>
     </section> 
     <!-- Slide 4 over-->
+    <footer class="footer" id="footer">
+        <div class="container">
+            <p class="text-center">All trademarks referenced herein are the properties of their respective owners. This site is not sponsored, endorsed, or run by the U.S. Government.</p>
+        </div>
+    </footer>
 </template>
