Landing page colour change

--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -2,7 +2,7 @@
     <!-- Slide 1 Start-->
     <section class="slide-1" id="slide-1" data-slide="1">
         <div class="container">
-            <div class="row">
+            <div class="row-fluid">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h2 class="font-thin">BRL-CAD</h2>
                     <h1>Online Geometry Viewer</h1>
@@ -15,10 +15,10 @@
     <div style="clear:both;"></div>
     <div id="slide-1-subPart">
         <div class="container">
-            <div class="row text-center">
+            <div class="row-fluid text-center">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <h3>Explore the power of OGV</h3><br />
-                    <div class="row line-row">
+                    <div class="row-fluid line-row">
                         <div class="hr">&nbsp;</div>
                     </div><br />
                     <h4 class="subPart-para">BRL-CAD has designed this package that provides the freedom of proficiency to the common user. Whatever formulated offline can be reckoned online, just the minor requirements .g file. Bestowing the freedom of platform independence, is used to render graphics. It can be used as a standalone viewer for static objects or as a display engine for other programs which produce dynamically changing geometry.</h4>
