--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -21,7 +21,7 @@
                     <div class="row-fluid line-row">
                         <div class="hr">&nbsp;</div>
                     </div><br />
-                    <h4 class="subPart-para">BRL-CAD has designed this package that provides the freedom of proficiency to the common user. Whatever formulated offline can be reckoned online, just the minor requirements .g file. Bestowing the freedom of platform independence, is used to render graphics. It can be used as a standalone viewer for static objects or as a display engine for other programs which produce dynamically changing geometry.</h4>
+                    <h4 class="subPart-para">Online Geometry Viewer is an online web application, where users can upload, view and share 3D models. BRL-CAD has designed this package that provides the freedom of proficiency to the common user. Whatever formulated offline can be viewed online, just the minor requirements .g file. Along with hosting the models online, one can like (love) or comment on them. It can be viewed as a social blogging platform for 3D models.</h4>
                 </div>
             </div>
         </div>
@@ -29,64 +29,16 @@
     <!-- Slide 1 Over -->
 
     <!-- Slide 2 Start-->
-    <section class="slide" id="slide-2" data-slide="2">
-    <div class="container">
-        <div class="row mt centered">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <h1 class="font-semibold heading-size">Look Feel and Share your design</h1>
-                <h3 class="subHeading-size">View your design and share following just simple steps.</h3>
-            </div>            
-        </div> <br />
-        <div class="row mt centered content">
-            <div class="col-lg-4 col-md-4 col-sm-4">
-                <p><img class="mobile-view-plane" src="/icons/plane.png" width="100px" height="100px"/></p>
-                <h2 class="font-thin description">Upload</h2>
-                <h4>Browse/Drag and Drop to upload your .g file.</h4>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4">
-                <p><img class="mobile-view-cube" src="/icons/cube.png" width="100px" height="100px"/></p>
-                <h2 class="font-thin description">View</h2>
-                <h4>View your design in three dimension.</h4>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4">
-                <p><img class="mobile-view-rocket" src="/icons/rocket.png" width="100px" height="100px"/></p>
-                <h2 class="font-thin description">Share</h2>
-                <h4>Share your design with anyone and anywhere.</h4>
-            </div>        
-        </div>            
-    </div>    
-    </section>
-    <!-- Slide 2 Over -->
-
-    <!-- Slide 3 Start -->
-    <div id="slide-3" class="story" data-slide="3">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <h1>Freely licensed software</h1><br />
-                    <div class="row line-row">
-                        <div class="hr">&nbsp;</div>
-                    </div><br />
-                    <h3>Its the matter of liberty, not the price.</h3>
-                </div>
-            </div>
-        </div>
-    </div>    
-    <!-- Slide 3 Over -->
-
-    <!-- Slide 4 Start-->
-    <section class="slide story" id="slide-4" data-slide="4">
+    <section class="slide story" id="slide-2" data-slide="2">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin heading-slide-4">Contrary to popular belief, <span class="font-semibold semibold">OGV</span> is not simply only a viewer.</div>
+                <div class="col-12 heading-slide-2">OGV is not simply only a viewer</div>
             </div>
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
             </div>
             <div class="row subtitle-row">
-                <div class="col-12 font-thin subHeading-slide-4">This is what <span class="font-semibold semibold">OGV do best</span></div>
+                <div class="col-12 font-thin subHeading-slide-2">This is what OGV does best</div>
             </div>
             <div class="row content-row">
                 <div class="col-12 col-lg-3 col-sm-6">
@@ -112,10 +64,29 @@
             </div>
         </div>
     </section> 
-    <!-- Slide 4 over-->
+    <!-- Slide 2 over-->
+
+    <!-- Slide 3 Start -->
+    <div id="slide-3" class="story" data-slide="3">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="heading-slide-3">Freely licensed software</div><br />
+                    <div class="row line-row">
+                        <div class="hr">&nbsp;</div>
+                    </div><br />
+                    <h3>It's a matter of freedom, not the price.</h3>
+                </div>
+            </div>
+        </div>
+    </div>    
+    <!-- Slide 3 Over -->
+
+    <!-- Footer Start -->
     <footer class="footer" id="footer">
         <div class="container">
             <p class="text-center">All trademarks referenced herein are the properties of their respective owners. This site is not sponsored, endorsed, or run by the U.S. Government.</p>
         </div>
     </footer>
+    <!-- Footer End -->
 </template>
