Improved landing page

--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -7,39 +7,23 @@
                     <h2 class="font-thin">BRL-CAD</h2>
                     <h1>Online Geometry Viewer</h1>
                     <h2>A social blogging platform for 3D models.</h2> <br />
-                    <button class="btn btn-default">Sign-In</button>
+                    <a href="/log-in"><button class="btn btn-default">Sign-In</button></a>
                 </div>
             </div>
         </div>           
     </section>
-    <div style="clear:both;"></div>
-    <div id="slide-1-subPart">
-        <div class="container">
-            <div class="row-fluid text-center">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <h3>Explore the power of OGV</h3><br />
-                    <div class="row-fluid line-row">
-                        <div class="hr">&nbsp;</div>
-                    </div><br />
-                    <h4 class="subPart-para">Online Geometry Viewer is an online web application, where users can upload, view and share 3D models. BRL-CAD has designed this package that provides the freedom of proficiency to the common user. Whatever formulated offline can be viewed online, just the minor requirements .g file. Along with hosting the models online, one can like (love) or comment on them. It can be viewed as a social blogging platform for 3D models.</h4>
-                </div>
-            </div>
-        </div>
-    </div>    
+    <div style="clear:both;"></div>    
     <!-- Slide 1 Over -->
 
     <!-- Slide 2 Start-->
     <section class="slide story" id="slide-2" data-slide="2">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 heading-slide-2">OGV is not simply only a viewer</div>
+                <div class="col-12 heading-slide-2">This is what OGV does best</div>
             </div>
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
-            </div>
-            <div class="row subtitle-row">
-                <div class="col-12 font-thin subHeading-slide-2">This is what OGV does best</div>
-            </div>
+            </div> <br />
             <div class="row content-row">
                 <div class="col-12 col-lg-3 col-sm-6">
                     <p><img class="mobile-view-fileUpload" src="/icons/fileUpload.png" width="140px" height="140px"/></p>
@@ -67,10 +51,10 @@
     <!-- Slide 2 over-->
 
     <!-- Slide 3 Start -->
-    <div id="slide-3" class="story" data-slide="3">
+    <div id="slide-3" class="slide story" data-slide="3">
         <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 ">
+                <div class="row text-row">
                     <div class="heading-slide-3">Freely licensed software</div><br />
                     <div class="row line-row">
                         <div class="hr">&nbsp;</div>
