Little modifications in feedback slide

--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -108,7 +108,7 @@
                         </div>    
                         <p>*All fields are compulsory to fill</p>
                         <button class="btn primary-btn btn-default form-control" type="submit">Send</button>
-                        <!-- <input type="hidden" name="_next" value="//localhost:3000/feedback_thanks" /> -->
+                        <input type="hidden" name="_next" value="//localhost:3000/feedback_thanks" />
                         <input type="hidden" name="_subject" value="[OGV] feedback Submission" />
                     </form>
                 </div>
