Added different views to view model

--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -88,11 +88,11 @@
                 <form action="//formspree.io/deeky.sharma@gmail.com" method="POST" id="feedForm" onsubmit="notify()">
                     <div class="form-group">
                         <!-- <label for="email">Email address</label> -->
-                        <input type="email" class="form-control text-center" id="email" name="email" placeholder="Email Address">
+                        <input type="email" class="form-control text-center" id="email" name="email" placeholder="Email Address" title="Enter email address" required>
                     </div><br>
                     <div class="form-group">
                         <!-- <label for="email">Category</label> -->
-                        <select name="category" class="form-control text-center" id="category" form="feedForm">
+                        <select name="category" class="form-control text-center" id="category" form="feedForm" title="Select reason" required>
                             <option selected="selected">Please select reason</option>
                             <option value="Improve this Page">Improve this Page</option>
                             <option value="Suggest new features/ideas">Suggest new features/ideas</option>
@@ -104,12 +104,12 @@
                     </div><br>
                     <div class="form-group">
                         <!-- <label for="email">Message</label>                             -->
-                        <textarea class="form-control" name="message" form="feedForm" placeholder="Message"></textarea>
+                        <textarea class="form-control" name="message" form="feedForm" placeholder="Message" title="Write message" required></textarea>
                     </div>    
                     <p>*All fields are compulsory to fill</p>
                     <button class="btn primary-btn btn-default form-control" type="submit">Send</button>
                     <input type="hidden" name="_next" value="//localhost:3000" />
-                    <input type="hidden" name="_subject" value="[OGV] feedback Submission" />
+                    <input type="hidden" name="_subject" value="[OGV] Feedback Submission" />
                 </form>
             </div>
         </div> <!-- Form End -->
