--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -69,7 +69,7 @@
 
     <!-- Slide 4 Start -->
     <!-- Container -->
-    <div class="container slide" id="slide-4" data-slide="4">
+    <div class="container slide" id="slide-4">
         <div class="col-lg-12 col-md-12 col-sm-12 ">
             <div class="heading-slide-2">Feedback</div>
         </div>
@@ -92,8 +92,8 @@
                     </div><br>
                     <div class="form-group">
                         <!-- <label for="email">Category</label> -->
-                        <select name="category" class="form-control text-center" id="category" form="feedForm" title="Select reason" required>
-                            <option selected="selected">Please select reason</option>
+                        <select name="category" class="form-control text-center" id="category" form="feedForm" title="Select reason" required data-errormessage-value-missing="Please, pick one">
+                            <option selected disabled value="">Please select reason</option>
                             <option value="Improve this Page">Improve this Page</option>
                             <option value="Suggest new features/ideas">Suggest new features/ideas</option>
                             <option value="Pinpoint bug">Pinpoint bug</option>
@@ -104,7 +104,7 @@
                     </div><br>
                     <div class="form-group">
                         <!-- <label for="email">Message</label>                             -->
-                        <textarea class="form-control" name="message" form="feedForm" placeholder="Message" title="Write message" required></textarea>
+                        <textarea class="form-control" id="message" name="message" form="feedForm" placeholder="Message" title="Write message" required></textarea>
                     </div>    
                     <p>*All fields are compulsory to fill</p>
                     <button class="btn primary-btn btn-default form-control" type="submit">Send</button>
