--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -85,7 +85,8 @@
         <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="row">
                 <!-- Enter your email address at the place of <email_here> in order to recieve feedback via emails to your account -->
-                <form action="//formspree.io/deeky.sharma@gmail.com" method="POST" id="feedForm" onsubmit="notify()">
+                {{#if isFillingForm}}
+                <form action="//formspree.io/deeky.sharma@gmail.com" method="POST" class="feedForm" id="feedForm" onsubmit="notify()">
                     <div class="form-group">
                         <!-- <label for="email">Email address</label> -->
                         <input type="email" class="form-control text-center" id="email" name="email" placeholder="Email Address" title="Enter email address" required>
@@ -111,6 +112,7 @@
                     <input type="hidden" name="_next" value="//localhost:3000" />
                     <input type="hidden" name="_subject" value="[OGV] Feedback Submission" />
                 </form>
+                {{/if}}
             </div>
         </div> <!-- Form End -->
     </div><!-- Container End -->
