routes, links and unwanted files deletion

--- a/OGV/client/landingPage.html
+++ b/OGV/client/landingPage.html
@@ -10,7 +10,7 @@
                     {{#unless currentUser}}
                         <a href="/log-in"><button class="btn btn-default">Sign-In</button></a>
                     {{else}}
-                        <a href="/models"><button class="btn btn-default">View Models</button></a>
+                        <a href="/newsfeed"><button class="btn btn-default">Visit newsfeed</button></a>
                     {{/unless}}                                
                 </div>
             </div>
